examples/test/testpolicy12238.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12238
  namespace: namespace113
spec:
  podSelector:
    matchLabels:
      key32: value23
      key21: value5
      key39: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value41
          key26: value22
          key2: value28
      podSelector:
        matchLabels:
          key45: value2
          key4: value42
